posiGen_FullsendBox/src/objects/Prospect__c.object
<CustomObject>
    <description>Mirror object for Native Leads</description>
    <fields>
        <fullName>Activity_Time_Difference__c</fullName>
        <description>First Activity date/time and Created date/time difference.</description>
        <formula>IF(ISNULL(created_date_time__c  ),0, (First_Activity_date_time__c - created_date_time__c)*24*60*60*1000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Time Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Add_to_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggers the Process flow that adds a new lead to a campaign as a campaign member</description>
        <label>Add to Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ambassador_Referring_Contact__c</fullName>
        <formula>Lead__r.Ambassador__Referred_By_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Abmassador Referring Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appt_Date_Time__c</fullName>
        <label>Brightcurrent Appt. Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Are_you_past_due_on_your_electric_bill__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This question is for NY/CT customers.  Check if they are past due.</inlineHelpText>
        <label>Are you past due on your electric bill?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brightcurrent_Average_Monthly_bill__c</fullName>
        <label>Brightcurrent Average Monthly bill</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Can_owner_access_utility_bill_online__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if Yes</inlineHelpText>
        <label>Can owner access utility bill online?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checked_for_Duplicates__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you clicked on the Find Duplicates button to ensure there are no duplicate Leads for this customer?</inlineHelpText>
        <label>Checked for Duplicates?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_has_a_unique_ownership_situation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The client either has a deceased spouse/shared homeowner, POA, divorce, offshore worker, succession etc. If you are unsure as to whether or not the client has a unique situation, check with Telemarketing management or Sales.</inlineHelpText>
        <label>Client has a unique ownership situation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_home_is_not_a_double__c</fullName>
        <description>Confirmed home is not double</description>
        <label>Confirmed home is not a double</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Contacting Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned - Not Feasible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned - Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned - Existing Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t Reach Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called 6x, no response</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DoNotCall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_client_have_shading_around_home__c</fullName>
        <description>Have you spoken to the client about potential shading around the roof of their home?</description>
        <label>Does client have shading around home?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electricity_Provider_BC__c</fullName>
        <label>Electricity Provider BC</label>
        <picklist>
            <picklistValues>
                <fullName>National Grid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ConEdison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSEG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eversource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Illuminating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electricity_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Electricity Provider</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Utility</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prospects (Electricity Provider)</relationshipLabel>
        <relationshipName>Prospects_Providing_Electricity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emma_Bounced__c</fullName>
        <formula>Lead__r.emma__Bounced__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Emma Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Emma_Member_ID__c</fullName>
        <formula>Lead__r.emma__Emma_Member_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Emma Member ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Activity_date_time__c</fullName>
        <label>First Activity date/time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HasOptedOutOfEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Heating_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Heating Provider</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Utility</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prospects (Heating Provider)</relationshipLabel>
        <relationshipName>Prospects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Highest_Electric_Bill_in_Past_12_Months__c</fullName>
        <label>Highest Electric Bill in Past 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Home_Heating_Method__c</fullName>
        <label>Home Heating Method</label>
        <picklist>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propane</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hot_Water_Heater__c</fullName>
        <inlineHelpText>What type of hot water heater?</inlineHelpText>
        <label>Hot Water Heater</label>
        <picklist>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hot_Water_Heating_Method__c</fullName>
        <label>Hot Water Heating Method</label>
        <picklist>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tankless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_yes_shading_details__c</fullName>
        <description>Explanation of shading situation for home.</description>
        <label>If yes, shading details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ImportBatch__c</fullName>
        <description>Batch note for bulk imports.  All records of same batch will have the same batch note.</description>
        <label>ImportBatch</label>
        <length>88</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImportID__c</fullName>
        <description>External ID used in batch imports.  ID may be manually created prior to adding or may be machine-generated by external source</description>
        <externalId>true</externalId>
        <label>ImportID</label>
        <length>88</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Infomercial_Type__c</fullName>
        <label>Infomercial Type</label>
        <picklist>
            <controllingField>Sub_Lead_Source__c</controllingField>
            <picklistValues>
                <fullName>Late Night</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daytime</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsConverted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsConverted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Portion_of_Roof_Facing_South_or_West__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Portion of Roof Facing South or West</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landing_PAge__c</fullName>
        <label>Landing Page</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <label>Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>Ambassador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brightcurrent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call from Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canvassing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faraday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL SHW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modernize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonprofit Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketing Calls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TelephoneLists.Biz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Age__c</fullName>
        <formula>TODAY () -  DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail_1__c</fullName>
        <label>Lead Source Detail 1</label>
        <picklist>
            <picklistValues>
                <fullName>News 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NBC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Prospects</relationshipLabel>
        <relationshipName>Prospects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lease_Source_Detail_2__c</fullName>
        <label>Lease Source Detail 2</label>
        <picklist>
            <picklistValues>
                <fullName>Morning News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Day News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Today Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBS This Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fox Morning News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good Morning America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judge Judy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeopardy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr. Phil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lock_Lead_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Lead Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone c</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Modernize_Lead_ID__c</fullName>
        <label>Modernize Lead ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_Owner_Names__c</fullName>
        <inlineHelpText>Enter Additional Owner names, birthdates and social security numbers.</inlineHelpText>
        <label>Multiple Owner Name(s)</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Multiple_Owners__c</fullName>
        <inlineHelpText>Does the property have multiple owners?</inlineHelpText>
        <label>Multiple Owners?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Municipality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which Municipality is this property in?</inlineHelpText>
        <label>Municipality</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Municipality</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prospects In This Municipality</relationshipLabel>
        <relationshipName>Prospects_In_This_Municipality</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Activities__c</fullName>
        <label># of Activities</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Months_Past_Due__c</fullName>
        <inlineHelpText>Answer if &quot;Are you past due on your electric bill?&quot; is checked.</inlineHelpText>
        <label>Number of Months Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Owners__c</fullName>
        <label># of Owners</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Units__c</fullName>
        <defaultValue>1</defaultValue>
        <description>How many units are in the building.</description>
        <label># of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numeric_IDx__c</fullName>
        <formula>Lead__r.Numeric_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numeric ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Keyword__c</fullName>
        <label>Original Keyword</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Search_Campaign__c</fullName>
        <label>Original Search Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Search_Type__c</fullName>
        <label>Original Search Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outside_Company__c</fullName>
        <label>Outside Company</label>
        <picklist>
            <controllingField>LeadSource__c</controllingField>
            <picklistValues>
                <fullName>Greener Dawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RE Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clear Compass Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joule Solar Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Advantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organic Invasion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBM: Freedom Faith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBM: Operation Fuel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OverrideProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OverrideProcessBuilder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Own_Property_at_This_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Own Property at this Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Method_Notes__c</fullName>
        <label>Preferred Method Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Method_of_Contact__c</fullName>
        <label>Preferred Method of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Mobile Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ready_To_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready To Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Past_Due__c</fullName>
        <inlineHelpText>Fill in if &quot;Are you past due on your electric bill?&quot; is checked</inlineHelpText>
        <label>Reason for Past Due</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referred_By_Ambassador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Ambassador</label>
        <referenceTo>Ambassador__Ambassador__c</referenceTo>
        <relationshipLabel>Prospects</relationshipLabel>
        <relationshipName>Prospects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_By_Ambassador_id__c</fullName>
        <label>Referred By Ambassador id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_By_Ambassadorx__c</fullName>
        <formula>Lead__r.Ambassador__Referred_By_Ambassador__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referred By Ambassador</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residence_Type__c</fullName>
        <label>Residence Type</label>
        <picklist>
            <picklistValues>
                <fullName>Stand-Alone House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Townhome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condominum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Home</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_Type_SF2__c</fullName>
        <label>Roof Type</label>
        <picklist>
            <picklistValues>
                <fullName>Shingle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrugated Metal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seam/Standard Metal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terracotta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hurricane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_Type__c</fullName>
        <description>Inbound Email Roof Type</description>
        <label>Roof Type Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Opt_Out__c</fullName>
        <formula>Lead__r.smagicinteract__SMSOptOut__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Search_Campaign__c</fullName>
        <label>Search Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Engine__c</fullName>
        <label>Search Engine</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Type__c</fullName>
        <label>Search Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_text__c</fullName>
        <label>State (text)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Lead Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessed- Feasible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment(s) Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Feasible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Lead_Source__c</fullName>
        <inlineHelpText>Select the associated child lead source that reference the Parent campaigns.</inlineHelpText>
        <label>Sub Lead Source</label>
        <picklist>
            <controllingField>LeadSource__c</controllingField>
            <picklistValues>
                <fullName>Solar Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pure Rewards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PosiGen Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yard Sign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PosiGen.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infomercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Door Knocking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posigen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TimeToContact__c</fullName>
        <description>First Activity date/time and Created date/time difference.</description>
        <formula>(First_Activity_date_time__c -  CreatedDate )*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to First Contact (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>